--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
 	"keywords": ["ropa", "maestria"],
 	"license": "MIT",
 	"main": "server.js",
+	"scripts": {
+		"start": "node server.js"
+	},
 	"dependencies": {
 	    "body-parser": "1.12.3",
 	    "cookie-parser": "1.3.4",
